syntax = "proto3"; //protocol buffer 3 language 

package packagePB;

message Carrinho { // MODEL: 3 propriedades, ordenados por 1,2,3,4,5
  string id = 1;
  string dataEmitido = 2;
  string clienteId = 3;
  bool ativo = 4;
  repeated string listaProdutosIds = 5;
}

//mensagem que deve ser recebida
message GetCarrinhoByIdRequest {
	string id = 1;
}

message UpdateCarrinhoByIdRequest {
	Carrinho car =1;
}

message CreateCarrinhoRequest {
	Carrinho car =1;
}

message ListAllCarRequest {
  repeated Carrinho cars = 1;
}

message DeleteByIdRequest{
  string id = 1;
}

//mensagem que deve ser recebida
message CarrinhoResponse {
  Carrinho car = 1;
}

message CarrinhosResponse {
  repeated Carrinho cars = 1;
}

//metodos
service carrinhoService {
  rpc ListAllCar(ListAllCarRequest) returns (CarrinhosResponse) ;
  rpc GetCarrinhoByid(GetCarrinhoByIdRequest) returns (CarrinhoResponse);
  rpc UpdateCarrinhoById(UpdateCarrinhoByIdRequest) returns (CarrinhoResponse);
  rpc CreateCarrinho(CreateCarrinhoRequest) returns (CarrinhoResponse);
  rpc DeleteCarrinhoById(DeleteByIdRequest) returns (CarrinhoResponse);
}